# GLFW-CMake-starter

./: .gitignore  CMakeLists.txt  README.md  licence.txt  main.cpp
